...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/horizontal_margin"
            android:layout_marginStart="@dimen/page_padding"
            android:layout_marginEnd="@dimen/page_padding"
            android:text='@{vm.languageString}'
            app:layout_constraintBottom_toTopOf="@+id/btnMore"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnMore"
            android:layout_width="wrap_content"
...
