<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="jp.co.yumemi.android.code_check.ui.fragments.settings.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/page_padding"
        android:paddingEnd="@dimen/page_padding"
        android:paddingBottom="@dimen/page_padding">

        <TextView
            android:id="@+id/textView"
            style="@style/settingsLabelStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{vm.selectedLanguageLabel}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <include
            android:id="@+id/englishLayout"
            layout="@layout/selection_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_margin_top"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> vm.onEnglishLayoutClicked()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            bind:itemBackground='@{vm.shouldSelectEnglish}'
            bind:label='@{"English"}' />


        <include
            android:id="@+id/japaneseLayout"
            layout="@layout/selection_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_margin_top"
            android:clickable="true"
            android:focusable="true"
            android:onClick="@{() -> vm.onJapaneseLayoutClicked()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/englishLayout"
            bind:itemBackground='@{vm.shouldSelectJapanese}'
            bind:label='@{"日本語"}' />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>